Fix a MySQL bug that was preventing delete from working.  Filed upstream bug #106203